fixed bugs and added button for booking on mobile

--- a/css/custom.css
+++ b/css/custom.css
@@ -642,6 +642,19 @@ textarea:focus, input:focus{
     color: #fff;
 }
 
+.mob-bookparty-btn {
+    display: hidden;
+    width: 100%;
+    padding: 10px;
+    color: #fff;
+    background-color: #DB6A6A;
+    border-radius: 4px;
+    margin-bottom: 20px;
+    text-align: center;
+    font-family: 'Montserrat', sans-serif;
+    cursor: pointer;
+}
+
 /* Activities Styles */
 #activities-body {
     width: 100%;
@@ -921,6 +934,16 @@ textarea:focus, input:focus{
 #credits-body p {
     font-family: 'Helvetica', sans-serif;
     font-size: 16px;
+}
+
+.github-link {
+    font-family: 'Montserrat', sans-serif;
+    width: 100%;
+    text-align: center;
+    background-color: #dfdfdf;
+    padding-top: 20px;
+    padding-bottom: 5px;
+    margin-bottom: 15px;
 }
 
 /* Side Menu Styles */
@@ -1271,7 +1294,7 @@ textarea:focus, input:focus{
 
 .package-time {
     padding: 10px;
-    background-color: #bdc3c7;
+    background-color: #DB6A6A;
     font-size: 14px;
     color: #fff;
     border-radius: 4px;
@@ -1296,7 +1319,6 @@ textarea:focus, input:focus{
     font-family: 'Montserrat', sans-serif;
     text-align: center;
     color: #7f8c8d;
-    font-weight: bold;
     font-size: 16px;
     margin-top: 40px;
     float: left;
@@ -1448,6 +1470,12 @@ DESCRIPTION: Media Queries are used to adjust HTML objects on a webpage so that 
         width: 100%;
         text-align: center;
         padding: 15px;
+    }
+    .book-alert {
+        display: none;
+    }
+    .mob-bookparty-btn {
+        display: block;
     }
     #event-01 {
         margin: 30px 0px 10px 0px;
